# plugin_template

./: README.md
package_a/: CMakeLists.txt  package.xml
package_a/include/package_a/: base_interface.hpp
package_b/: CMakeLists.txt  my_plugin.xml  package.xml
package_b/include/package_b/: my_plugin.hpp
package_b/src/: my_plugin.cpp
package_c/: CMakeLists.txt  package.xml
package_c/src/: main.cpp
